FINAL_2: fix some issues